--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -4,7 +4,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text="Username"
         android:id="@+id/tvUsername"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -29,12 +29,31 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/tvCaption"
-        android:layout_alignParentStart="true"
         android:textSize="20sp"
         android:maxLines="3"
         android:ellipsize="end"
+        android:layout_below="@+id/tvLikes"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/tvTimeStamp"
+        android:textSize="20sp"
+        android:layout_above="@+id/ivPhoto"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Likes"
+        android:id="@+id/tvLikes"
         android:layout_below="@+id/ivPhoto"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="20dp" />
+        android:layout_alignParentStart="true"
+        android:textSize="20sp" />
 
 </RelativeLayout>
